==> factoryal/MFRC522-STM32Cube/MFRC522.cpp <==
#include "MFRC522.h"
#define MFRC522_MaxPICCs (sizeof(_TypeNamePICC)/sizeof(_TypeNamePICC[0]))
#define MFRC522_MaxError (sizeof(_ErrorMessage)/sizeof(_ErrorMessage[0]))

void MFRC522::PCD_WriteRegister(uint8_t reg, uint8_t value)
{
  HAL_GPIO_WritePin(cs_port, cs_pin, GPIO_PIN_RESET); /* Select SPI Chip MFRC522 */

  // MSB == 0 is for writing. LSB is not used in address. Datasheet section 8.1.2.3.
  uint8_t cmd_w = reg & 0x7E;
//  (void) m_SPI.write(reg & 0x7E);
//  (void) m_SPI.write(value);
  HAL_SPI_Transmit(hspi, &cmd_w, 1, 500);
  HAL_SPI_Transmit(hspi, &value, 1, 500);

  HAL_GPIO_WritePin(cs_port, cs_pin, GPIO_PIN_SET); /* Release SPI Chip MFRC522 */
}

void MFRC522::PCD_WriteRegister(uint8_t reg, uint8_t count, uint8_t *values)
{
  HAL_GPIO_WritePin(cs_port, cs_pin, GPIO_PIN_RESET); /* Select SPI Chip MFRC522 */

  // MSB == 0 is for writing. LSB is not used in address. Datasheet section 8.1.2.3.
  uint8_t cmd_w = reg & 0x7E;
//  (void) m_SPI.write(reg & 0x7E);
  HAL_SPI_Transmit(hspi, &cmd_w, 1, 500);
  for (uint8_t index = 0; index < count; index++)
  {
	  HAL_SPI_Transmit(hspi, &(values[index]), 1, 500);
//    (void) m_SPI.write(values[index]);
  }

  HAL_GPIO_WritePin(cs_port, cs_pin, GPIO_PIN_SET); /* Release SPI Chip MFRC522 */
}

uint8_t MFRC522::PCD_ReadRegister(uint8_t reg)
{
  uint8_t value;
  uint8_t zero = 0;

  HAL_GPIO_WritePin(cs_port, cs_pin, GPIO_PIN_RESET); /* Select SPI Chip MFRC522 */

  // MSB == 1 is for reading. LSB is not used in address. Datasheet section 8.1.2.3.
  uint8_t cmd_r = reg | 0x80;
//  (void) m_SPI.write(0x80 | reg);
  HAL_SPI_Transmit(hspi, &cmd_r, 1, 500);

  // Read the value back. Send 0 to stop reading.
//  value = m_SPI.write(0);
  HAL_SPI_TransmitReceive(hspi, &zero, &value, 1, 500);

  HAL_GPIO_WritePin(cs_port, cs_pin, GPIO_PIN_SET); /* Release SPI Chip MFRC522 */

  return value;
}

void MFRC522::PCD_ReadRegister(uint8_t reg, uint8_t count, uint8_t *values, uint8_t rxAlign)
{
  if (count == 0) { return; }

  uint8_t address = 0x80 | reg;  // MSB == 1 is for reading. LSB is not used in address. Datasheet section 8.1.2.3.
  uint8_t index = 0;             // Index in values array.
  uint8_t zero = 0;

  HAL_GPIO_WritePin(cs_port, cs_pin, GPIO_PIN_RESET);                      /* Select SPI Chip MFRC522 */
  count--;                       // One read is performed outside of the loop
//  (void) m_SPI.write(address);   // Tell MFRC522 which address we want to read
  HAL_SPI_Transmit(hspi, &address, 1, 500);

  while (index < count)
  {
    if ((index == 0) && rxAlign) // Only update bit positions rxAlign..7 in values[0]
    {
      // Create bit mask for bit positions rxAlign..7
      uint8_t mask = 0;
      for (uint8_t i = rxAlign; i <= 7; i++)
      {
        mask |= (1 << i);
      }

      // Read value and tell that we want to read the same address again.
//      uint8_t value = m_SPI.write(address);
      uint8_t value;
      HAL_SPI_TransmitReceive(hspi, &address, &value, 1, 500);

      // Apply mask to both current value of values[0] and the new data in value.
      values[0] = (values[index] & ~mask) | (value & mask);
    }
    else
    {
      // Read value and tell that we want to read the same address again.
//      values[index] = m_SPI.write(address);
      HAL_SPI_TransmitReceive(hspi, &address, &(values[index]), 1, 500);
    }

    index++;
  }

//  values[index] = m_SPI.write(0); // Read the final byte. Send 0 to stop reading.
  HAL_SPI_TransmitReceive(hspi, &zero, &(values[index]), 1, 500);

  HAL_GPIO_WritePin(cs_port, cs_pin, GPIO_PIN_SET);                       /* Release SPI Chip MFRC522 */
}

void MFRC522::PCD_Init()
{
  /* Reset MFRC522 */
//  m_RESET = 0;
//  wait_ms(10);
//  m_RESET = 1;
	HAL_GPIO_WritePin(reset_port, reset_pin, GPIO_PIN_RESET);
	HAL_Delay(10);
	HAL_GPIO_WritePin(reset_port, reset_pin, GPIO_PIN_SET);
  
  // Section 8.8.2 in the datasheet says the oscillator start-up time is the start up time of the crystal + 37,74us. Let us be generous: 50ms.
//  wait_ms(50);
	HAL_Delay(50);

  // When communicating with a PICC we need a timeout if something goes wrong.
  // f_timer = 13.56 MHz / (2*TPreScaler+1) where TPreScaler = [TPrescaler_Hi:TPrescaler_Lo].
  // TPrescaler_Hi are the four low bits in TModeReg. TPrescaler_Lo is TPrescalerReg.
  PCD_WriteRegister(TModeReg, 0x80);      // TAuto=1; timer starts automatically at the end of the transmission in all communication modes at all speeds
  PCD_WriteRegister(TPrescalerReg, 0xA9); // TPreScaler = TModeReg[3..0]:TPrescalerReg, ie 0x0A9 = 169 => f_timer=40kHz, ie a timer period of 25us.
  PCD_WriteRegister(TReloadRegH, 0x03);   // Reload timer with 0x3E8 = 1000, ie 25ms before timeout.
  PCD_WriteRegister(TReloadRegL, 0xE8);

  PCD_WriteRegister(TxASKReg, 0x40);      // Default 0x00. Force a 100 % ASK modulation independent of the ModGsPReg register setting
  PCD_WriteRegister(ModeReg, 0x3D);       // Default 0x3F. Set the preset value for the CRC coprocessor for the CalcCRC command to 0x6363 (ISO 14443-3 part 6.2.4)

  PCD_WriteRegister(RFCfgReg, (0x07<<4)); // Set Rx Gain to max

  PCD_AntennaOn();                        // Enable the antenna driver pins TX1 and TX2 (they were disabled by the reset)
}
