==> kbiva/stm32f103_libs/lib_MFRC522/src/mfrc522.c <==
#include "mfrc522.h"
#include "delay.h"
#include <string.h>
#define MFRC522_MaxPICCs (sizeof(_TypeNamePICC)/sizeof(_TypeNamePICC[0]))
#define MFRC522_MaxError (sizeof(_ErrorMessage)/sizeof(_ErrorMessage[0]))

void PCD_Init(void) {

  /* Reset MFRC522 */
  GPIO_ResetBits(GPIO_Reset,GPIO_Pin_Reset);
  DWT_Delay(10000);
  GPIO_SetBits(GPIO_Reset,GPIO_Pin_Reset);
  // Section 8.8.2 in the datasheet says the oscillator start-up time is the start up time of the crystal + 37,74us. Let us be generous: 50ms.
  DWT_Delay(50000);

  // When communicating with a PICC we need a timeout if something goes wrong.
  // f_timer = 13.56 MHz / (2*TPreScaler+1) where TPreScaler = [TPrescaler_Hi:TPrescaler_Lo].
  // TPrescaler_Hi are the four low bits in TModeReg. TPrescaler_Lo is TPrescalerReg.
  PCD_WriteRegister(TModeReg, 0x80);      // TAuto=1; timer starts automatically at the end of the transmission in all communication modes at all speeds
  PCD_WriteRegister(TPrescalerReg, 0xA9); // TPreScaler = TModeReg[3..0]:TPrescalerReg, ie 0x0A9 = 169 => f_timer=40kHz, ie a timer period of 25us.
  PCD_WriteRegister(TReloadRegH, 0x03);   // Reload timer with 0x3E8 = 1000, ie 25ms before timeout.
  PCD_WriteRegister(TReloadRegL, 0xE8);

  PCD_WriteRegister(TxASKReg, 0x40);      // Default 0x00. Force a 100 % ASK modulation independent of the ModGsPReg register setting
  PCD_WriteRegister(ModeReg, 0x3D);       // Default 0x3F. Set the preset value for the CRC coprocessor for the CalcCRC command to 0x6363 (ISO 14443-3 part 6.2.4)

  PCD_WriteRegister(RFCfgReg, (0x07<<4)); // Set Rx Gain to max

  PCD_AntennaOn();                        // Enable the antenna driver pins TX1 and TX2 (they were disabled by the reset)
}

void PCD_WriteRegister(uint8_t reg, uint8_t value) {

  GPIO_ResetBits(GPIO_CS,GPIO_Pin_CS); /* Select SPI Chip MFRC522 */

  // MSB == 0 is for writing. LSB is not used in address. Datasheet section 8.1.2.3.
  (void) spi_write(reg & 0x7E);
  (void) spi_write(value);

  GPIO_SetBits(GPIO_CS,GPIO_Pin_CS); /* Release SPI Chip MFRC522 */
}

uint8_t PCD_ReadRegister(uint8_t reg) {

  uint8_t value;

  GPIO_ResetBits(GPIO_CS,GPIO_Pin_CS); /* Select SPI Chip MFRC522 */

  // MSB == 1 is for reading. LSB is not used in address. Datasheet section 8.1.2.3.
  (void) spi_write(0x80 | reg);
  // Read the value back. Send 0 to stop reading.
  value = spi_write(0);

  GPIO_SetBits(GPIO_CS,GPIO_Pin_CS); /* Release SPI Chip MFRC522 */

  return value;
}
